syntax = "proto3";

package gRPC_restful;

import "google/api/annotations.proto";

message StringMessage {
  string value = 1;
}

service RestService {
    rpc GetMes(StringMessage) returns (StringMessage) {
        option (google.api.http) = {
            get: "/mes/{value}"
        };
    }
    rpc PostMes(StringMessage) returns (StringMessage) {
        option (google.api.http) = {
            post: "/mes"
            body: "*"
        };
    }
}